<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>ScoreBillJones</artifactId>
        <groupId>score-bill-jones</groupId>
        <version>3.0-SNAPSHOT</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <artifactId>scorebj.app</artifactId>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
    </properties>

    <dependencies>
        <dependency>
            <groupId>score-bill-jones</groupId>
            <artifactId>scorebj.gui</artifactId>
            <version>${project.version}</version>
            <classifier>jar-with-dependencies</classifier>
        </dependency>
        <dependency>
            <groupId>score-bill-jones</groupId>
            <artifactId>scorebj.jre</artifactId>
            <classifier>jre</classifier>
            <type>zip</type>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <configuration>
                    <resources>
                        <resource>
                            <directory>src/main/resources</directory>
                        </resource>
                    </resources>
                    <outputDirectory>${project.build.directory}</outputDirectory>
                </configuration>
              </plugin>
            <plugin>
                <artifactId>maven-dependency-plugin</artifactId>
                <executions>
                    <execution>
                        <id>fetch-uberjar</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>copy</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <goal>copy</goal>
                    <artifactItems>
                        <artifactItem>
                            <groupId>${project.groupId}</groupId>
                            <artifactId>scorebj.gui</artifactId>
                            <version>${project.version}</version>
                            <classifier>jar-with-dependencies</classifier>
                        </artifactItem>
                    </artifactItems>
                    <outputDirectory>${project.build.directory}</outputDirectory>
                </configuration>
            </plugin>
            <plugin>
                <groupId>com.akathist.maven.plugins.launch4j</groupId>
                <artifactId>launch4j-maven-plugin</artifactId>
                <version>2.1.2</version>
                <executions>
                    <execution>
                        <id>create-exe</id>
                        <phase>package</phase>
                        <goals>
                            <goal>launch4j</goal>
                        </goals>
                        <configuration>
                            <headerType>gui</headerType>
                            <outfile>target/ScoreBillJones.exe</outfile>
                            <jar>target/scorebj.gui-${project.version}-jar-with-dependencies.jar</jar>
                            <errTitle>ScoreBillJones - Error</errTitle>
                            <classPath>
                                <mainClass>scorebj.gui.ScoringForm</mainClass>
                                <addDependencies>true</addDependencies>
                                <preCp>lib/</preCp>
                            </classPath>
                            <dontWrapJar>false</dontWrapJar>
                            <cmdLine/>
                            <chdir>.</chdir>
                            <priority>normal</priority>
                            <downloadUrl>http://java.com/download</downloadUrl>
                            <supportUrl/>
                            <stayAlive>true</stayAlive>
                            <restartOnCrash>false</restartOnCrash>
                            <manifest>${project.build.directory}/ScoreBillJones.exe.manifest</manifest>
                            <icon>${project.basedir}/Google-Noto-Emoji-Activities-52775-club-suit.ico</icon>
                            <jre>
                                <path>jre</path>
                                <bundledJre64Bit>true</bundledJre64Bit>
                                <bundledJreAsFallback>false</bundledJreAsFallback>
                                <minVersion>12</minVersion>
                                <maxVersion>17</maxVersion>
                                <jdkPreference>preferJre</jdkPreference>
                                <runtimeBits>64/32</runtimeBits>
                                <initialHeapPercent>10</initialHeapPercent>
                                <maxHeapPercent>50</maxHeapPercent>
                                <opts>
                                    <opt>-Dlaunch4j.exedir=%EXEDIR% --add-opens java.base/java.io=ALL-UNNAMED</opt>
                                </opts>
                            </jre>
                            <versionInfo>
                                <fileVersion>3.0.0.0</fileVersion>
                                <txtFileVersion>3.0.0.0</txtFileVersion>
                                <fileDescription>Score Bill Jones</fileDescription>
                                <copyright>Alan Curran</copyright>
                                <productVersion>3.0.0.0</productVersion>
                                <txtProductVersion>3.0.0.0</txtProductVersion>
                                <productName>ScoreBillJones</productName>
                                <companyName/>
                                <internalName>ScoreBillJones</internalName>
                                <originalFilename>ScoreBillJones.exe</originalFilename>
                                <trademarks/>
                                <language>ENGLISH_UK</language>
                            </versionInfo>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <executions>
                    <execution>
                        <id>create-distribution-file</id>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <descriptors>
                        <descriptor>.\dist.xml</descriptor>
                    </descriptors>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>